--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.show-sql=true
 # Razorpay
 razorpay.api.key=rzp_test_PljZQVn3aSKQyt
 razorpay.api.secret=QyMphmfI857XDy
+server.port=${PORT:8080}
