--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ecommerce
 # Datasource (Railway environment variables)
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:ecommerce_db}
+spring.datasource.username=root
+spring.datasource.password=${MYSQLPASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
