--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.show-sql=true
 razorpay.api.key=rzp_test_RDUH5iU89uoLay
 razorpay.api.secret=n0HMvh6e3Q0JaTuDskVthA2C
 server.port=${PORT:8080}
+frontend.base.url=http://localhost:5173
